Adjust for inventoryView to allow getTitle to replace old getName method